<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".pages.PropertySelection">

    <ImageView
        android:id="@+id/imageview_logo"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/pdb_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textview_select_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/taileb"
        android:text="@string/select_home"
        android:textColor="@color/colorTextGreen"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageview_logo" />

    <ImageButton
        android:id="@+id/button_add_house"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="#ffffff"
        android:contentDescription="@string/plus_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageview_logo"
        android:src="@drawable/plus"/>

    <FrameLayout
        android:id="@+id/frame_house_selection"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="42dp"
        android:background="@drawable/rounded_grey_border_background"
        app:layout_constraintBottom_toTopOf="@+id/button_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_select_home"
        app:layout_constraintVertical_bias="1.0">

    </FrameLayout>

    <Button
        android:id="@+id/button_logout"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorWhite"
        android:fontFamily="@font/taileb"
        android:text="@string/logout"
        android:textColor="@color/colorTextGreen"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/button_archive_drawer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorWhite"
        android:contentDescription="@string/archive_drawer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/archive_drawer" />

</androidx.constraintlayout.widget.ConstraintLayout>